--- a/src/styles/ImageList.css
+++ b/src/styles/ImageList.css
@@ -1,5 +1,6 @@
 .image-list{
-    margin-left: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 0 10px;
@@ -12,16 +13,4 @@
 
 .segment{
     background-color: #f0d9c3;
-}
-
-@media all and (min-width: 768px) and (max-width: 1024px) {
-    .image-list{
-        margin-left: 10%;
-    }
-}
-
-@media all and (min-width: 1024px) {
-    .image-list{
-        margin-left: 1%;
-    }
 }
